# SimpleStats

./: .gitignore  Cargo.toml  README.md  http-codes.properties  main.rs  simplestats.conf  simplestats.yml  template.html
templates/: files-table.html  header.html  ip-table.html  main.html  overall.html  pages-table.html  referers-table.html  responses-table.html  table-vb-avg.html  table-vb.html  table-vvb-avg.html  time-taken-table.html  user-agent-table.html  users-table.html
