[package]
name = "simplestats"
version = "1.0.4"
edition = "2021"
authors = ["Chase Vaughan <git@cvaugh.dev>"]
repository = "https://github.com/cvaugh/SimpleStats"
homepage = "https://cvaugh.dev/simplestats"

[dependencies]
substring = "1.4.5"
chrono = "0.4"
linked-hash-map = "0.5.4"
shellexpand = "2.1.0"
flate2 = "1.0.24"
regex = "1.5.6"

[dependencies.yaml-rust]
git = "https://github.com/chyh1990/yaml-rust.git"

[[bin]]
name = "simplestats"
path = "main.rs"
